fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ main {
 /* #### UI ######################################################### */
 
 #appUI {
-  margin: 30px auto 10px;
+  margin: 20px auto 10px;
 }
 
 header {
